cleared linting